# cli-extension-dep-graph

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  README.md  catalog-info.yaml  go.mod  go.sum  test.txt
.circleci/: config.yml  continue-config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: bun-why-stability.yml  pr-title-check.yml
docs/: RELEASE.md
internal/bun/: bun_plugin.go  bun_plugin_test.go  depgraph.go  executor.go  lockfile.go  why_parser.go
internal/constants/: constants.go
internal/conversion/: converter.go  extract_test.go  remote_converter.go  remote_converter_test.go  sbom.go  sbom_test.go
internal/depgraph/: builder.go  depgraph.go
internal/legacycli/: errors.go  errors_test.go  legacy_resolution.go  legacy_resolution_test.go
internal/mocks/: uvclient.go
internal/ptrutil/: ptrutil.go
internal/remoteconv/: extract_test.go  remote_converter.go  remote_converter_test.go
internal/snykclient/: errors.go  packages.go  packages_test.go  sbomconvert.go  sbomconvert_test.go  snykclient.go  snykclient_test.go  types.go  types_test.go
internal/uv/: executor.go  executor_test.go  mock_client.go  utils.go  utils_test.go  uv.go  uv_plugin.go  uv_plugin_test.go  uvclient.go  uvclient_test.go
internal/uvclient/: uvclient.go  uvclient_test.go
internal/workflow/: constants.go  flags.go  workflow.go
pkg/conversion/: converter.go
pkg/depgraph/: callback.go  callback_test.go  depgraph.go  errors.go  errors_test.go  flags.go  legacy_resolution.go  legacy_resolution_test.go  meta.go  (+7 more)
pkg/ecosystems/python/poetry/testdata/acceptance/simple/: expected.json  pyproject.toml
pkg/ecosystems/rust/cargo/testdata/acceptance/cfg-expressions/: Cargo.toml  expected.json
pkg/ecosystems/rust/cargo/testdata/acceptance/optional-target-deps/: Cargo.toml  expected.json
script/: README.md  lint.sh  version-bump.sh
(+574 files in other folders)
