[project]
name = "simple"
version = "0.1.0"
description = "Smoke fixture: single direct dependency on six."
authors = [
    {name = "Snyk", email = "support@snyk.io"}
]
requires-python = ">=3.9"
dependencies = [
    "six (>=1.16.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
