[package]
name = "snyk-cargo-cfg-expressions"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"

# simple cfg() — windows-only on a non-windows host
[target.'cfg(windows)'.dependencies]
winapi = "0.3"

# all(...) — both predicates must hold
[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
windows-sys = "0.52"

# any(...) — either predicate matches
[target.'cfg(any(target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
nix = "0.27"

# not(...) — negation, matches exotic targets (no unix, no windows)
[target.'cfg(not(any(unix, windows)))'.dependencies]
libm = "0.2"

# nested all/any/not
[target.'cfg(all(any(target_os = "linux", target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
mio = "0.8"
